[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dolphine = { git = "https://github.com/Gabeperson/dolphine" }
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "6778089" }
serde = "1.0.152"
serde_json = "1.0.91"
include_dir = { version = "0.7.3"}
tokio = { version = "1.25.0", features = ["full"] }
rand = "0.8.5"